# rust

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
crates/api-service/: Cargo.toml
crates/api-service/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs
crates/api-service/src/handlers/: auth.rs  health.rs  mod.rs  users.rs
crates/api-service/src/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs
crates/api-service/src/services/: mod.rs
crates/cache/: Cargo.toml
crates/cache/src/: client.rs  lib.rs  operations.rs  serialization.rs
crates/database/: Cargo.toml
crates/database/src/: connection.rs  lib.rs  migrations.rs  models.rs  repositories.rs
crates/event-service/: Cargo.toml
crates/event-service/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  constants.rs  errors.rs  lib.rs  traits.rs  types.rs  utils.rs
crates/worker-service/: Cargo.toml
crates/worker-service/src/: config.rs  lib.rs  main.rs
crates/worker-service/src/jobs/: mod.rs
crates/worker-service/src/processors/: mod.rs
crates/worker-service/src/scheduler/: mod.rs
docs/: README.md
hello_world/: Cargo.toml  main
hello_world/src/: main.rs  schema.md
k8s/: namespace.yml
k8s/api-service/: deployment.yml
migrations/: 001_initial_schema.sql
scripts/: deploy.sh  setup.sh  test.sh
