[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/database",
    "crates/cache",
    "crates/api-service",
    "crates/worker-service",
    "crates/event-service", "hello_world",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-microservices"
homepage = "https://github.com/yourusername/rust-microservices"
documentation = "https://docs.rs/rust-microservices"
keywords = ["microservices", "api", "kafka", "redis", "postgresql"]
categories = ["web-programming", "database", "asynchronous"]
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
sea-query = "0.30"
sea-query-postgres = "0.4"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
figment = { version = "0.10", features = ["yaml", "env"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"
rand = "0.8"
async-trait = "0.1"

# Serialization formats
rmp-serde = "1.1"
bincode = "1.3"

# Compression
flate2 = "1.0"
lz4_flex = "0.11"

# Validation
validator = { version = "0.17", features = ["derive"] }

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Testing
mockall = "0.12"
testcontainers = "0.15"
wiremock = "0.5"

# Development
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# Cron scheduling
cron = "0.12"

# Additional testing
axum-test = "14.0"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
debug = true
opt-level = 0
