[package]
name = "cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Shared library
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Redis
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Serialization formats
rmp-serde = { workspace = true }
bincode = { workspace = true }

# Compression
flate2 = { workspace = true }
lz4_flex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = { workspace = true }