[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Shared library
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-postgres = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = { workspace = true }