[package]
name = "event-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "event-service"
path = "src/main.rs"

[dependencies]
# Shared libraries
shared = { path = "../shared" }
database = { path = "../database" }
cache = { path = "../cache" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Kafka
rdkafka = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }

# Configuration
config = { workspace = true }
figment = { workspace = true }

# CLI
clap = { workspace = true }
dotenvy = { workspace = true }

# Async traits
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = { workspace = true }