[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Validation
validator = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
config = { workspace = true }
figment = { workspace = true }

# Additional dependencies for utilities
regex = "1.10"
argon2 = { workspace = true }
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"